Adding circle-CI integration.
Have circle-ci make all the pdfs and publish them to an accessible location.
See https://circleci.com/gh/samtools/hts-specs for build information.

Adds a "badge" to the readme.md file informing that the build succeded.

Adding difflatex to also show only modified pages

--- a/CRAMv2.1.tex
+++ b/CRAMv2.1.tex
@@ -13,7 +13,6 @@
 
 \usepackage{graphicx}
 \usepackage{array}
-\usepackage{ulem}
 \usepackage{fixltx2e}
 \usepackage{amssymb}
 \usepackage{fancyhdr}
@@ -85,6 +84,8 @@ define how logical data types are stored in CRAM. Data in CRAM is stored either
 as as bits or as bytes. Writing values as bits and bytes is described in detail 
 below.
 
+
+CHANGES HERE
 \subsection{\textbf{Logical data types}}
 
 \begin{description}
@@ -113,7 +114,6 @@ An array of any logical data type: \texttt{<}type\texttt{>}[ ]
 
 \subsection{\textbf{Writing bits to a bit stream}}
 
-A bit stream consists of a sequence of 1s and 0s. The bits are written most significant 
 bit first where new bits are stacked to the right and full bytes on the left are 
 written out. In a bit stream the last byte will be incomplete if less than 8 bits 
 have been written to it. In this case the bits in the last byte are shifted to 
