--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -197,7 +197,7 @@ There are 8 fixed fields per record. All data lines are tab-delimited. In all ca
   \item MQ : RMS mapping quality, e.g. MQ=52
   \item MQ0 : Number of MAPQ == 0 reads covering this record
   \item NS : Number of samples with data
-  \item SB : strand bias at this position
+  \item SB : strand base at this position
   \item SOMATIC : indicates that the record is a somatic mutation, for cancer genomics
   \item VALIDATED : validated by follow-up experiment
   \item 1000G : membership in 1000 Genomes
