Fill out NM tagvalue{}.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -193,7 +193,7 @@ Mapping quality of the mate/next segment.
 \item[NH:i:\tagvalue{}]
 Number of reported alignments that contains the query in the current record.
 
-\item[NM:i:\tagvalue{}]
+\item[NM:i:\tagvalue{count}]
 Number of differences (mismatches plus inserted and deleted bases) between the sequence and reference, counting only (case-insensitive) A, C, G and T bases in sequence and reference as potential matches with everything else being a mismatch.
 Note this means that ambiguity codes in both sequence and reference that match each other, such as `{\tt N}' in both, and compatible codes such as `{\tt A}' and `{\tt R}', are still counted as mismatches.
 The special sequence base `{\tt =}' will always be considered to be a match, even if the reference is ambiguous at that point.
