Duplicate sample IDs not allowed in header line

--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -150,7 +150,7 @@ The header line names the 8 fixed, mandatory columns. These columns are as follo
   \item INFO
 \end{enumerate}
 
-If genotype data is present in the file, these are followed by a FORMAT column header, then an arbitrary number of sample IDs. The header line is tab-delimited.
+If genotype data is present in the file, these are followed by a FORMAT column header, then an arbitrary number of sample IDs. Duplicate sample IDs are not allowed. The header line is tab-delimited.
 
 \subsection{Data lines}
 \subsubsection{Fixed fields}
