--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -269,6 +269,7 @@ The header line names the 8 fixed, mandatory columns. These columns are as follo
 \end{enumerate}
 
 If genotype data is present in the file, these are followed by a FORMAT column header, then an arbitrary number of sample IDs.
+Duplicate sample IDs are not allowed.
 The header line is tab-delimited and there must be no tab characters at the end of the line.
 
 \subsection{Data lines}
