Update description of INFO fields in VCFv4.3.tex to avoid confusion and improve consistency (#256)
'Keys' used in section about INFO and genotype fields

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -323,15 +323,15 @@ Fixed fields are:
   (String, no white-space or semi-colons permitted, duplicate values not allowed.)
   \item INFO - additional information: (String, no semi-colons or equals-signs permitted; commas are permitted only as delimiters for lists of values; characters with special meaning can be encoded using the percent encoding, see Section~\ref{character-encoding}; space characters are allowed)
 
-  INFO fields are encoded as a semicolon-separated series of short keys with optional values in the format: $<$key$>$=$<$data$>$[,data].
+  INFO fields are encoded as a semicolon-separated series of short keys with optional values in the format: key[=data[,data]].
   INFO keys must match the regular expression \texttt{\^{}([A-Za-z\_][0-9A-Za-z\_.]*|1000G)\$}, please note that ``1000G'' is allowed as a special legacy value.
-  Duplicate fields are not allowed.
-  Arbitrary keys are permitted, although the sub-fields listed in Table~\ref{table:reserved-info} are reserved (albeit optional).
+  Duplicate keys are not allowed.
+  Arbitrary keys are permitted, although those listed in Table~\ref{table:reserved-info} are reserved (albeit optional).
 
   \begin{table}[htbp]
     \centering
     \begin{tabularx}{\textwidth}{ | p{2.5cm} | p{1.5cm} | p{1.5cm} | X | }
-	Field		& Number	& Type		& Description \\ \hline
+	Key		& Number	& Type		& Description \\ \hline
 	AA		& 1		& String	& Ancestral allele \\
 	AC		& A		& Integer	& Allele count in genotypes, for each ALT allele, in the same order as listed  \\
 	AD		& R		& Integer	& Total read depth for each allele \\
@@ -354,23 +354,23 @@ Fixed fields are:
 	VALIDATED	& 0		& Flag		& Validated by follow-up experiment \\
 	1000G		& 0		& Flag		& 1000 Genomes membership \\
     \end{tabularx}
-    \caption{Reserved INFO fields}
+    \caption{Reserved INFO keys}
     \label{table:reserved-info}
   \end{table}
 
-  The exact format of each INFO sub-field should be specified in the meta-information (as described above).
+  The exact format of each INFO key should be specified in the meta-information (as described above).
   Example for an INFO field: DP=154;MQ=52;H2.
   Keys without corresponding values may be used to indicate group membership (e.g. H2 indicates the SNP is found in HapMap 2).
-  See Section~\ref{sv-info-keys} for additional reserved INFO sub-fields used to encode structural variants.
+  See Section~\ref{sv-info-keys} for additional reserved INFO keys used to encode structural variants.
 \end{enumerate}
 
 \subsubsection{Genotype fields}
 If genotype information is present, then the same types of data must be present for all samples.
-First a FORMAT field is given specifying the data types and order (colon-separated FORMAT ids matching the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate fields are not allowed).
+First a FORMAT field is given specifying the data types and order (colon-separated FORMAT keys matching the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate keys are not allowed).
 This is followed by one data block per sample, with the colon-separated data corresponding to the types specified in the format.
-The first sub-field must always be the genotype (GT) if it is present.
-There are no required sub-fields.
-Additional Genotype fields can be defined in the meta-information, however, software support for such fields is not guaranteed.
+The first key must always be the genotype (GT) if it is present.
+There are no required keys.
+Additional Genotype keys can be defined in the meta-information, however, software support for them is not guaranteed.
 
 If any of the fields is missing, it is replaced with the MISSING value.
 For example if the FORMAT is GT:GQ:DP:HQ then $0\mid0:.:23:23,34$ indicates that GQ is missing.
@@ -401,7 +401,7 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
       PQ		& 1		& Integer	& Phasing quality \\
       PS		& 1		& Integer	& Phase set \\
   \end{tabularx}
-  \caption{Reserved genotype fields}
+  \caption{Reserved genotype keys}
   \label{table:reserved-genotypes}
 \end{table}
 
