fixing typo in vcf specs
Pegigree -> Pedigree

--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -896,7 +896,7 @@ Let's consider a cancer patient VCF file with 4 genomes: germline, primary\_tumo
 \begin{figure}[ht]
 \centering
 \includegraphics[width=4in,height=2.67in]{img/derivation-400x267.png}
-\caption{Pegigree example}
+\caption{Pedigree example}
 \end{figure}
 
 \begin{verbatim}
