--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1256,7 +1256,7 @@ The PEDIGREE lines would look like:
 \begin{figure}[ht]
 \centering
 \includegraphics[width=4in,height=2.67in]{img/derivation-400x267.png}
-\caption{Pegigree example}
+\caption{Pedigree example}
 \end{figure}
 
 \begin{verbatim}
