--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -363,7 +363,7 @@ adding to---rather than replacing---the existing {\tt OA} information.
 
 The {\tt OA} field is designed to provide record-level information that can be useful for understanding the provenance of the information in a record. 
 It is not designed to provide a complete history of the template alignment information. 
-In particular, realignments resulting in the the removal of Secondary or Supplementary records will cause the loss of all tags associated with those records, and may alternatively leave the {\tt SA} tag in an invalid state.
+In particular, realignments resulting in the the removal of Secondary or Supplementary records will cause the loss of all tags associated with those records, and may also leave the {\tt SA} tag in an invalid state.
 
 \item[OC:Z:\tagvalue{cigar}]
 Original CIGAR, usually before realignment.
