--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -36,7 +36,7 @@
 
 \begin{document}
 
-\input{SAMv1.ver}
+\input{./SAMv1.ver}
 \title{Sequence Alignment/Map Format Specification}
 \author{The SAM/BAM Format Specification Working Group}
 \date{\headdate}
@@ -58,6 +58,8 @@ alignments. Header lines start with `{\tt @}', while alignment lines do
 not. Each alignment line has 11 mandatory fields for essential alignment
 information such as mapping position, and variable number of optional
 fields for flexible or aligner specific information.
+
+Yossi Was Here (testing latex diff)
 
 This specification is for version 1.6 of the SAM and BAM formats.  Each SAM and
 BAM file may optionally specify the version being used via the
