Followed one-sentence-per-line rule as in the rest of the VCF specification

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -175,7 +175,9 @@ Symbolic alternate alleles specified in the ALT field are described as follows:
 ##ALT=<ID=type,Description=description>
 \end{verbatim}
 
-\noindent \textbf{Structural Variants} \newline
+\bigskip
+
+\noindent \textbf{Structural variants} \newline
 In symbolic alternate alleles for structural variants, the ID field indicates the type of structural variant, and consists of a type and an optional colon-separated list of subtypes.
 ID values are case sensitive strings and must not contain whitespace or angle brackets.
 The first level type must be one of the following:
@@ -188,9 +190,10 @@ The first level type must be one of the following:
   \item BND Breakend
 \end{itemize}
 
-\noindent The list of first level symbolic alleles that represent structural variants is a closed set. Any symbolic alleles with a first level type other than one of those listed above are considered to be non-structural symbolic alleles.\newline
+The list of first level symbolic alleles that represent structural variants is a closed set.
+Any symbolic alleles with a first level type other than one of those listed above are considered to be non-structural symbolic alleles.
 
-\noindent Variant subtypes should be used to add specificity to the maximum extent supported by the data. Reserved subtypes include:
+Variant subtypes should be used to add specificity to the maximum extent supported by the data. Reserved subtypes include:
 \newline
 
 \begin{tabular}{l l}
@@ -209,15 +212,16 @@ INS:ME:HERV  &  Insertion of HERV element relative to the reference \\
 DUP:TANDEM  &  Tandem duplication, in same orientation as original \\
 DUP:INV-BEFORE  &  Tandem duplication, inserted before original in inverted orientation \\
 DUP:INV-AFTER  &  Tandem duplication, inserted after original in inverted orientation \\
-\end{tabular}\newline \newline
+\end{tabular}
+\newline
 
-\noindent Variants should be written using the most precise type that can be determined by the variant caller. For example, if the insertion site of a new copy of a LINE1 element cannot be determined, it would be specified as a DUP of the originating LINE1 element. However if the new insertion site can be identified, the variant should be specified as INS:ME:LINE1 at the insertion site.\newline
+Variants should be written using the most precise type that can be determined by the variant caller.
+For example, if the insertion site of a new copy of a LINE1 element cannot be determined, it would be specified as a DUP of the originating LINE1 element.
+However if the new insertion site can be identified, the variant should be specified as INS:ME:LINE1 at the insertion site.
 
-\noindent Note that the DUP type is not restricted to tandem duplications and that the DUP subtypes have different breakpoints than their parent type.\newline
+Note that the DUP type is not restricted to tandem duplications and that the DUP subtypes have different breakpoints than their parent type.
 
-\noindent Variant subtypes are an open set and is it valid for a variant caller to define a subtype not specified in the above list. Such subtypes are considered to be instances of the first reserved subtype, with breakpoint and copy number semantics matching the reserved type. For example, INS:ME:PELEMENT is a valid caller-defined subtype, but INV:FOLDBACK is not since foldback inversions do not result in the same breakpoint and copy number changes as a simple inversion.\newline
-
-\noindent See examples below for further guidance.
+Variant subtypes are an open set and is it valid for a variant caller to define a subtype not specified in the above list. Such subtypes are considered to be instances of the first reserved subtype, with breakpoint and copy number semantics matching the reserved type. For example, INS:ME:PELEMENT is a valid caller-defined subtype, but INV:FOLDBACK is not since foldback inversions do not result in the same breakpoint and copy number changes as a simple inversion.
 
 \bigskip
 
@@ -568,7 +572,9 @@ For precise variants, END is POS + length of REF allele - 1, and the for impreci
 ##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
 \end{verbatim}
 \normalsize
-SVTYPE is a primitive basic data type and must be specified for all structural variants. Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering. For each VCF record, SVTYPE must be assigned exactly one of the following values:
+SVTYPE must be specified for all structural variants.
+Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering.
+SVTYPE must be assigned exactly one of the following values:
 
 \begin{itemize}
   \item DEL: Deletion relative to the reference
@@ -585,7 +591,10 @@ SVTYPE is a primitive basic data type and must be specified for all structural v
 ##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Difference in length between REF and ALT alleles">
 \end{verbatim}
 \normalsize
-SVLEN indicates the relative size of the ALT allele compared to the REF allele. If ALT is longer than REF (e.g. insertions), SVLEN must be positive; if ALT is shorter than REF (e.g. deletions), SVLEN must be negative. Simple inversions will have SVLEN=0. The size of the inversion can be determined by the POS field and the END attribute. One SVLEN value for each ALT allele.
+SVLEN indicates the relative size of the ALT allele compared to the REF allele, with one SVLEN value for each ALT allele.
+If ALT is longer than REF (e.g. insertions), SVLEN must be positive; if ALT is shorter than REF (e.g. deletions), SVLEN must be negative.
+Simple inversions will have SVLEN=0.
+The size of the inversion can be determined by the POS field and the END attribute.
 
 \footnotesize
 \begin{verbatim}
